reference/5.1/Microsoft.PowerShell.Management/Get-ChildItem.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell, cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 03/27/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/get-childitem?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Get-ChildItem
ms.openlocfilehash: 9c613686765aa735e1e2cc58bfab533d1dc1e89f
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93194188"
---
# <span data-ttu-id="d9877-103">Get-ChildItem</span><span class="sxs-lookup"><span data-stu-id="d9877-103">Get-ChildItem</span></span>

## <span data-ttu-id="d9877-104">SINOPSE</span><span class="sxs-lookup"><span data-stu-id="d9877-104">SYNOPSIS</span></span>

<span data-ttu-id="d9877-105">Obtém os itens e os itens filhos de um ou mais locais especificados.</span><span class="sxs-lookup"><span data-stu-id="d9877-105">Gets the items and child items in one or more specified locations.</span></span>

## <span data-ttu-id="d9877-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="d9877-106">SYNTAX</span></span>

### <span data-ttu-id="d9877-107">Itens (padrão)</span><span class="sxs-lookup"><span data-stu-id="d9877-107">Items (Default)</span></span>

```
Get-ChildItem [[-Path] <string[]>] [[-Filter] <string>] [-Include <string[]>] [-Exclude <string[]>]
 [-Recurse] [-Depth <uint32>] [-Force] [-Name] [-UseTransaction]
 [-Attributes <FlagsExpression[FileAttributes]>] [-Directory] [-File] [-Hidden] [-ReadOnly] [-System]
 [<CommonParameters>]
```

### <span data-ttu-id="d9877-108">LiteralItems</span><span class="sxs-lookup"><span data-stu-id="d9877-108">LiteralItems</span></span>

```
Get-ChildItem [[-Filter] <string>] -LiteralPath <string[]> [-Include <string[]>]
 [-Exclude <string[]>] [-Recurse] [-Depth <uint32>] [-Force] [-Name] [-UseTransaction]
 [-Attributes <FlagsExpression[FileAttributes]>] [-Directory] [-File] [-Hidden] [-ReadOnly] [-System]
 [<CommonParameters>]
```

## <span data-ttu-id="d9877-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="d9877-109">DESCRIPTION</span></span>

<span data-ttu-id="d9877-110">O `Get-ChildItem` cmdlet obtém os itens em um ou mais locais especificados.</span><span class="sxs-lookup"><span data-stu-id="d9877-110">The `Get-ChildItem` cmdlet gets the items in one or more specified locations.</span></span> <span data-ttu-id="d9877-111">Se o item for um contêiner, ele obtém os itens dentro do contêiner, conhecidos como itens filho.</span><span class="sxs-lookup"><span data-stu-id="d9877-111">If the item is a container, it gets the items inside the container, known as child items.</span></span> <span data-ttu-id="d9877-112">Você pode usar o parâmetro **recurse** para obter itens em todos os contêineres filho e usar o parâmetro **Depth** para limitar o número de níveis para recurse.</span><span class="sxs-lookup"><span data-stu-id="d9877-112">You can use the **Recurse** parameter to get items in all child containers and use the **Depth** parameter to limit the number of levels to recurse.</span></span>

<span data-ttu-id="d9877-113">`Get-ChildItem` não exibe diretórios vazios.</span><span class="sxs-lookup"><span data-stu-id="d9877-113">`Get-ChildItem` doesn't display empty directories.</span></span> <span data-ttu-id="d9877-114">Quando um `Get-ChildItem` comando inclui os parâmetros **Depth** ou **recurse** , os diretórios vazios não são incluídos na saída.</span><span class="sxs-lookup"><span data-stu-id="d9877-114">When a `Get-ChildItem` command includes the **Depth** or **Recurse** parameters, empty directories aren't included in the output.</span></span>

<span data-ttu-id="d9877-115">Os locais são expostos aos `Get-ChildItem` provedores do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d9877-115">Locations are exposed to `Get-ChildItem` by PowerShell providers.</span></span> <span data-ttu-id="d9877-116">Um local pode ser um diretório do sistema de arquivos, hive do registro ou um repositório de certificados.</span><span class="sxs-lookup"><span data-stu-id="d9877-116">A location can be a file system directory, registry hive, or a certificate store.</span></span> <span data-ttu-id="d9877-117">Para obter mais informações, consulte [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-117">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

## <span data-ttu-id="d9877-118">EXEMPLOS</span><span class="sxs-lookup"><span data-stu-id="d9877-118">EXAMPLES</span></span>

### <span data-ttu-id="d9877-119">Exemplo 1: obter itens filho de um diretório do sistema de arquivos</span><span class="sxs-lookup"><span data-stu-id="d9877-119">Example 1: Get child items from a file system directory</span></span>

<span data-ttu-id="d9877-120">Este exemplo obtém os itens filho de um diretório do sistema de arquivos.</span><span class="sxs-lookup"><span data-stu-id="d9877-120">This example gets the child items from a file system directory.</span></span> <span data-ttu-id="d9877-121">Os nomes de filename e de subdiretório são exibidos.</span><span class="sxs-lookup"><span data-stu-id="d9877-121">The filenames and subdirectory names are displayed.</span></span> <span data-ttu-id="d9877-122">Para locais vazios, o comando não retorna nenhuma saída e retorna ao prompt do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d9877-122">For empty locations, the command doesn't return any output and returns to the PowerShell prompt.</span></span>

<span data-ttu-id="d9877-123">O `Get-ChildItem` cmdlet usa o parâmetro **Path** para especificar o diretório `C:\Test` .</span><span class="sxs-lookup"><span data-stu-id="d9877-123">The `Get-ChildItem` cmdlet uses the **Path** parameter to specify the directory `C:\Test`.</span></span>
<span data-ttu-id="d9877-124">`Get-ChildItem` exibe os arquivos e diretórios no console do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d9877-124">`Get-ChildItem` displays the files and directories in the PowerShell console.</span></span>

```powershell
Get-ChildItem -Path C:\Test
```

```Output
   Directory: C:\Test

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
d-----        2/15/2019     08:29                Logs
-a----        2/13/2019     08:55             26 anotherfile.txt
-a----        2/12/2019     15:40         118014 Command.txt
-a----         2/1/2019     08:43            183 CreateTestFile.ps1
-ar---        2/12/2019     14:31             27 ReadOnlyFile.txt
```

<span data-ttu-id="d9877-125">Por padrão `Get-ChildItem` , lista o modo **(atributos** ), **LastWriteTime** , tamanho do arquivo ( **comprimento** ) e o **nome** do item.</span><span class="sxs-lookup"><span data-stu-id="d9877-125">By default `Get-ChildItem` lists the mode ( **Attributes** ), **LastWriteTime** , file size ( **Length** ), and the **Name** of the item.</span></span> <span data-ttu-id="d9877-126">As letras na propriedade **modo** podem ser interpretadas da seguinte maneira:</span><span class="sxs-lookup"><span data-stu-id="d9877-126">The letters in the **Mode** property can be interpreted as follows:</span></span>

- <span data-ttu-id="d9877-127">`l` criar</span><span class="sxs-lookup"><span data-stu-id="d9877-127">`l` (link)</span></span>
- <span data-ttu-id="d9877-128">`d` active</span><span class="sxs-lookup"><span data-stu-id="d9877-128">`d` (directory)</span></span>
- <span data-ttu-id="d9877-129">`a` operação</span><span class="sxs-lookup"><span data-stu-id="d9877-129">`a` (archive)</span></span>
- <span data-ttu-id="d9877-130">`r` (somente leitura)</span><span class="sxs-lookup"><span data-stu-id="d9877-130">`r` (read-only)</span></span>
- <span data-ttu-id="d9877-131">`h` oculto</span><span class="sxs-lookup"><span data-stu-id="d9877-131">`h` (hidden)</span></span>
- <span data-ttu-id="d9877-132">`s` (sistema).</span><span class="sxs-lookup"><span data-stu-id="d9877-132">`s` (system).</span></span>

<span data-ttu-id="d9877-133">Para obter mais informações sobre os sinalizadores de modo, consulte [about_Filesystem_Provider](../microsoft.powershell.core/about/about_filesystem_provider.md#attributes-flagsexpression).</span><span class="sxs-lookup"><span data-stu-id="d9877-133">For more information about the mode flags, see [about_Filesystem_Provider](../microsoft.powershell.core/about/about_filesystem_provider.md#attributes-flagsexpression).</span></span>

### <span data-ttu-id="d9877-134">Exemplo 2: obter nomes de item filho em um diretório</span><span class="sxs-lookup"><span data-stu-id="d9877-134">Example 2: Get child item names in a directory</span></span>

<span data-ttu-id="d9877-135">Este exemplo lista somente os nomes de itens em um diretório.</span><span class="sxs-lookup"><span data-stu-id="d9877-135">This example lists only the names of items in a directory.</span></span>

<span data-ttu-id="d9877-136">O `Get-ChildItem` cmdlet usa o parâmetro **Path** para especificar o diretório `C:\Test` .</span><span class="sxs-lookup"><span data-stu-id="d9877-136">The `Get-ChildItem` cmdlet uses the **Path** parameter to specify the directory `C:\Test`.</span></span> <span data-ttu-id="d9877-137">O parâmetro **Name** retorna somente os nomes de arquivo ou diretório do caminho especificado.</span><span class="sxs-lookup"><span data-stu-id="d9877-137">The **Name** parameter returns only the file or directory names from the specified path.</span></span>

```powershell
Get-ChildItem -Path C:\Test -Name
```

```Output
Logs
anotherfile.txt
Command.txt
CreateTestFile.ps1
ReadOnlyFile.txt
```

### <span data-ttu-id="d9877-138">Exemplo 3: obter itens filho no diretório e nos subdiretórios atuais</span><span class="sxs-lookup"><span data-stu-id="d9877-138">Example 3: Get child items in the current directory and subdirectories</span></span>

<span data-ttu-id="d9877-139">Este exemplo exibe os arquivos **. txt** que estão localizados no diretório atual e seus subdiretórios.</span><span class="sxs-lookup"><span data-stu-id="d9877-139">This example displays **.txt** files that are located in the current directory and its subdirectories.</span></span>

```powershell
Get-ChildItem -Path C:\Test\*.txt -Recurse -Force
```

```Output
    Directory: C:\Test\Logs\Adirectory

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
-a----        2/12/2019     16:16             20 Afile4.txt
-a-h--        2/12/2019     15:52             22 hiddenfile.txt
-a----        2/13/2019     13:26             20 LogFile4.txt

    Directory: C:\Test\Logs\Backup

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
-a----        2/12/2019     16:16             20 ATextFile.txt
-a----        2/12/2019     15:50             20 LogFile3.txt

    Directory: C:\Test\Logs

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
-a----        2/12/2019     16:16             20 Afile.txt
-a-h--        2/12/2019     15:52             22 hiddenfile.txt
-a----        2/13/2019     13:26             20 LogFile1.txt

    Directory: C:\Test

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
-a----        2/13/2019     08:55             26 anotherfile.txt
-a----        2/12/2019     15:40         118014 Command.txt
-a-h--        2/12/2019     15:52             22 hiddenfile.txt
-ar---        2/12/2019     14:31             27 ReadOnlyFile.txt
```

<span data-ttu-id="d9877-140">O `Get-ChildItem` cmdlet usa o parâmetro **Path** para especificar `C:\Test\*.txt` .</span><span class="sxs-lookup"><span data-stu-id="d9877-140">The `Get-ChildItem` cmdlet uses the **Path** parameter to specify `C:\Test\*.txt`.</span></span> <span data-ttu-id="d9877-141">O **caminho** usa o curinga asterisco ( `*` ) para especificar todos os arquivos com a extensão de nome de arquivo `.txt` .</span><span class="sxs-lookup"><span data-stu-id="d9877-141">**Path** uses the asterisk (`*`) wildcard to specify all files with the filename extension `.txt`.</span></span> <span data-ttu-id="d9877-142">O parâmetro **recurse** pesquisa o diretório **Path** em seus subdiretórios, conforme mostrado no **diretório:** cabeçalhos.</span><span class="sxs-lookup"><span data-stu-id="d9877-142">The **Recurse** parameter searches the **Path** directory its subdirectories, as shown in the **Directory:** headings.</span></span> <span data-ttu-id="d9877-143">O parâmetro **Force** exibe arquivos ocultos, como `hiddenfile.txt` que têm um modo de **h** .</span><span class="sxs-lookup"><span data-stu-id="d9877-143">The **Force** parameter displays hidden files such as `hiddenfile.txt` that have a mode of **h** .</span></span>

### <span data-ttu-id="d9877-144">Exemplo 4: obter itens filho usando o parâmetro include</span><span class="sxs-lookup"><span data-stu-id="d9877-144">Example 4: Get child items using the Include parameter</span></span>

<span data-ttu-id="d9877-145">Neste exemplo `Get-ChildItem` , usa o parâmetro **include** para localizar itens específicos do diretório especificado pelo parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="d9877-145">In this example `Get-ChildItem` uses the **Include** parameter to find specific items from the directory specified by the **Path** parameter.</span></span>

```powershell
# When using the -Include parameter, if you don't include an asterisk in the path
# the command returns no output.
Get-ChildItem -Path C:\Test\ -Include *.txt
```

```Output

```

```powershell
Get-ChildItem -Path C:\Test\* -Include *.txt
```

```Output
    Directory: C:\Test

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
-a----        2/13/2019     08:55             26 anotherfile.txt
-a----        2/12/2019     15:40         118014 Command.txt
-ar---        2/12/2019     14:31             27 ReadOnlyFile.txt
```

<span data-ttu-id="d9877-146">O `Get-ChildItem` cmdlet usa o parâmetro **Path** para especificar o diretório **C:\test** .</span><span class="sxs-lookup"><span data-stu-id="d9877-146">The `Get-ChildItem` cmdlet uses the **Path** parameter to specify the directory **C:\Test** .</span></span> <span data-ttu-id="d9877-147">O parâmetro **path** inclui um curinga asterisco ( `*` ) à direita para especificar o conteúdo do diretório.</span><span class="sxs-lookup"><span data-stu-id="d9877-147">The **Path** parameter includes a trailing asterisk (`*`) wildcard to specify the directory's contents.</span></span>
<span data-ttu-id="d9877-148">O parâmetro **include** usa um curinga asterisco ( `*` ) para especificar todos os arquivos com a extensão de nome de arquivo **. txt** .</span><span class="sxs-lookup"><span data-stu-id="d9877-148">The **Include** parameter uses an asterisk (`*`) wildcard to specify all files with the file name extension **.txt** .</span></span>

<span data-ttu-id="d9877-149">Quando o parâmetro **include** é usado, o parâmetro **Path** precisa de um curinga asterisco ( `*` ) à direita para especificar o conteúdo do diretório.</span><span class="sxs-lookup"><span data-stu-id="d9877-149">When the **Include** parameter is used, the **Path** parameter needs a trailing asterisk (`*`) wildcard to specify the directory's contents.</span></span> <span data-ttu-id="d9877-150">Por exemplo, `-Path C:\Test\*`.</span><span class="sxs-lookup"><span data-stu-id="d9877-150">For example, `-Path C:\Test\*`.</span></span>

- <span data-ttu-id="d9877-151">Se o parâmetro **recurse** for adicionado ao comando, o asterisco à direita ( `*` ) no parâmetro **Path** será opcional.</span><span class="sxs-lookup"><span data-stu-id="d9877-151">If the **Recurse** parameter is added to the command, the trailing asterisk (`*`) in the **Path** parameter is optional.</span></span> <span data-ttu-id="d9877-152">O parâmetro **recurse** Obtém os itens do diretório **Path** e seus subdiretórios.</span><span class="sxs-lookup"><span data-stu-id="d9877-152">The **Recurse** parameter gets items from the **Path** directory and its subdirectories.</span></span> <span data-ttu-id="d9877-153">Por exemplo, `-Path C:\Test\ -Recurse -Include *.txt`</span><span class="sxs-lookup"><span data-stu-id="d9877-153">For example, `-Path C:\Test\ -Recurse -Include *.txt`</span></span>
- <span data-ttu-id="d9877-154">Se um asterisco à direita ( `*` ) não estiver incluído no parâmetro **Path** , o comando não retornará nenhuma saída e retornará ao prompt do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d9877-154">If a trailing asterisk (`*`) isn't included in the **Path** parameter, the command doesn't return any output and returns to the PowerShell prompt.</span></span> <span data-ttu-id="d9877-155">Por exemplo, `-Path C:\Test\`.</span><span class="sxs-lookup"><span data-stu-id="d9877-155">For example, `-Path C:\Test\`.</span></span>

### <span data-ttu-id="d9877-156">Exemplo 5: obter itens filhos usando o parâmetro Exclude</span><span class="sxs-lookup"><span data-stu-id="d9877-156">Example 5: Get child items using the Exclude parameter</span></span>

<span data-ttu-id="d9877-157">A saída do exemplo mostra o conteúdo do diretório **C:\Test\Logs** .</span><span class="sxs-lookup"><span data-stu-id="d9877-157">The example's output shows the contents of the directory **C:\Test\Logs** .</span></span> <span data-ttu-id="d9877-158">A saída é uma referência para os outros comandos que usam os parâmetros **Exclude** e **recurse** .</span><span class="sxs-lookup"><span data-stu-id="d9877-158">The output is a reference for the other commands that use the **Exclude** and **Recurse** parameters.</span></span>

```powershell
Get-ChildItem -Path C:\Test\Logs
```

```Output
    Directory: C:\Test\Logs

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
d-----        2/15/2019     13:21                Adirectory
d-----        2/15/2019     08:28                AnEmptyDirectory
d-----        2/15/2019     13:21                Backup
-a----        2/12/2019     16:16             20 Afile.txt
-a----        2/13/2019     13:26             20 LogFile1.txt
-a----        2/12/2019     16:24             23 systemlog1.log
```

```powershell
Get-ChildItem -Path C:\Test\Logs\* -Exclude A*
```

```Output
    Directory: C:\Test\Logs

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
d-----        2/15/2019     13:21                Backup
-a----        2/13/2019     13:26             20 LogFile1.txt
-a----        2/12/2019     16:24             23 systemlog1.log
```

<span data-ttu-id="d9877-159">O `Get-ChildItem` cmdlet usa o parâmetro **Path** para especificar o diretório `C:\Test\Logs` .</span><span class="sxs-lookup"><span data-stu-id="d9877-159">The `Get-ChildItem` cmdlet uses the **Path** parameter to specify the directory `C:\Test\Logs`.</span></span>
<span data-ttu-id="d9877-160">O parâmetro **Exclude** usa o curinga asterisco ( `*` ) para especificar os arquivos ou diretórios que começam com **um** ou **um** são excluídos da saída.</span><span class="sxs-lookup"><span data-stu-id="d9877-160">The **Exclude** parameter uses the asterisk (`*`) wildcard to specify any files or directories that begin with **A** or **a** are excluded from the output.</span></span>

<span data-ttu-id="d9877-161">Quando o parâmetro **Exclude** é usado, um asterisco à direita ( `*` ) no parâmetro **Path** é opcional.</span><span class="sxs-lookup"><span data-stu-id="d9877-161">When the **Exclude** parameter is used, a trailing asterisk (`*`) in the **Path** parameter is optional.</span></span> <span data-ttu-id="d9877-162">Por exemplo, `-Path C:\Test\Logs` ou `-Path C:\Test\Logs\*`.</span><span class="sxs-lookup"><span data-stu-id="d9877-162">For example, `-Path C:\Test\Logs` or `-Path C:\Test\Logs\*`.</span></span>

- <span data-ttu-id="d9877-163">Se um asterisco à direita ( `*` ) não estiver incluído no parâmetro **Path** , o conteúdo do parâmetro **Path** será exibido.</span><span class="sxs-lookup"><span data-stu-id="d9877-163">If a trailing asterisk (`*`) isn't included in the **Path** parameter, the contents of the **Path** parameter are displayed.</span></span> <span data-ttu-id="d9877-164">As exceções são nomes de filename ou subdiretórios que correspondem ao valor do parâmetro **Exclude** .</span><span class="sxs-lookup"><span data-stu-id="d9877-164">The exceptions are filenames or subdirectory names that match the **Exclude** parameter's value.</span></span>
- <span data-ttu-id="d9877-165">Se um asterisco à direita ( `*` ) estiver incluído no parâmetro **Path** , o comando recursivamente nos subdiretórios do parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="d9877-165">If a trailing asterisk (`*`) is included in the **Path** parameter, the command recurses into the **Path** parameter's subdirectories.</span></span> <span data-ttu-id="d9877-166">As exceções são nomes de filename ou subdiretórios que correspondem ao valor do parâmetro **Exclude** .</span><span class="sxs-lookup"><span data-stu-id="d9877-166">The exceptions are filenames or subdirectory names that match the **Exclude** parameter's value.</span></span>
- <span data-ttu-id="d9877-167">Se o parâmetro **recurse** for adicionado ao comando, a saída de recursão será a mesma se o parâmetro **Path** incluir um asterisco à direita ( `*` ).</span><span class="sxs-lookup"><span data-stu-id="d9877-167">If the **Recurse** parameter is added to the command, the recursion output is the same whether or not the **Path** parameter includes a trailing asterisk (`*`).</span></span>

### <span data-ttu-id="d9877-168">Exemplo 6: obter as chaves do registro de um hive do registro</span><span class="sxs-lookup"><span data-stu-id="d9877-168">Example 6: Get the registry keys from a registry hive</span></span>

<span data-ttu-id="d9877-169">Este exemplo obtém todas as chaves do registro de `HKEY_LOCAL_MACHINE\HARDWARE` .</span><span class="sxs-lookup"><span data-stu-id="d9877-169">This example gets all the registry keys from `HKEY_LOCAL_MACHINE\HARDWARE`.</span></span>

<span data-ttu-id="d9877-170">`Get-ChildItem` usa o parâmetro **path** para especificar a chave do registro `HKLM:\HARDWARE` .</span><span class="sxs-lookup"><span data-stu-id="d9877-170">`Get-ChildItem` uses the **Path** parameter to specify the registry key `HKLM:\HARDWARE`.</span></span> <span data-ttu-id="d9877-171">O caminho do hive e o nível superior das chaves do registro são exibidos no console do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d9877-171">The hive's path and top level of registry keys are displayed in the PowerShell console.</span></span>

<span data-ttu-id="d9877-172">Para obter mais informações, consulte [about_Registry_Provider](../Microsoft.PowerShell.Core/About/about_Registry_Provider.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-172">For more information, see [about_Registry_Provider](../Microsoft.PowerShell.Core/About/about_Registry_Provider.md).</span></span>

```powershell
Get-ChildItem -Path HKLM:\HARDWARE
```

```Output
    Hive: HKEY_LOCAL_MACHINE\HARDWARE

Name             Property
----             --------
ACPI
DESCRIPTION
DEVICEMAP
RESOURCEMAP
UEFI
```

```powershell
Get-ChildItem -Path HKLM:\HARDWARE -Exclude D*
```

```Output
   Hive: HKEY_LOCAL_MACHINE\HARDWARE

Name                           Property
----                           --------
ACPI
RESOURCEMAP
```

<span data-ttu-id="d9877-173">O primeiro comando mostra o conteúdo da `HKLM:\HARDWARE` chave do registro.</span><span class="sxs-lookup"><span data-stu-id="d9877-173">The first command shows the contents of the `HKLM:\HARDWARE` registry key.</span></span> <span data-ttu-id="d9877-174">O parâmetro **Exclude** informa `Get-ChildItem` para não retornar nenhuma subchave que comece com `D*` .</span><span class="sxs-lookup"><span data-stu-id="d9877-174">The **Exclude** parameter tells `Get-ChildItem` not to return any subkeys that start with `D*`.</span></span> <span data-ttu-id="d9877-175">Atualmente, o parâmetro **Exclude** só funciona em subchaves, não em Propriedades de item.</span><span class="sxs-lookup"><span data-stu-id="d9877-175">Currently, the **Exclude** parameter only works on subkeys, not item properties.</span></span>

### <span data-ttu-id="d9877-176">Exemplo 7: obter todos os certificados com autoridade de assinatura de código</span><span class="sxs-lookup"><span data-stu-id="d9877-176">Example 7: Get all certificates with code-signing authority</span></span>

<span data-ttu-id="d9877-177">Este exemplo obtém cada certificado na unidade de **certificado** do PowerShell: que tem autoridade de assinatura de código.</span><span class="sxs-lookup"><span data-stu-id="d9877-177">This example gets each certificate in the PowerShell **Cert:** drive that has code-signing authority.</span></span>

<span data-ttu-id="d9877-178">O `Get-ChildItem` cmdlet usa o parâmetro **Path** para especificar o **CERT:** Provider.</span><span class="sxs-lookup"><span data-stu-id="d9877-178">The `Get-ChildItem` cmdlet uses the **Path** parameter to specify the **Cert:** provider.</span></span> <span data-ttu-id="d9877-179">O parâmetro **recurse** pesquisa o diretório especificado por **Path** e seus subdiretórios.</span><span class="sxs-lookup"><span data-stu-id="d9877-179">The **Recurse** parameter searches the directory specified by **Path** and its subdirectories.</span></span> <span data-ttu-id="d9877-180">O parâmetro **CodeSigningCert** obtém somente os certificados que têm autoridade de assinatura de código.</span><span class="sxs-lookup"><span data-stu-id="d9877-180">The **CodeSigningCert** parameter gets only certificates that have code-signing authority.</span></span>

```powershell
Get-ChildItem -Path Cert:\* -Recurse -CodeSigningCert
```

<span data-ttu-id="d9877-181">Para obter mais informações sobre o provedor de certificado e a unidade CERT:, consulte [about_Certificate_Provider](../Microsoft.PowerShell.Security/About/about_Certificate_Provider.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-181">For more information about the Certificate provider and the Cert: drive, see [about_Certificate_Provider](../Microsoft.PowerShell.Security/About/about_Certificate_Provider.md).</span></span>

### <span data-ttu-id="d9877-182">Exemplo 8: obter itens usando o parâmetro Depth</span><span class="sxs-lookup"><span data-stu-id="d9877-182">Example 8: Get items using the Depth parameter</span></span>

<span data-ttu-id="d9877-183">Este exemplo exibe os itens em um diretório e seus subdiretórios.</span><span class="sxs-lookup"><span data-stu-id="d9877-183">This example displays the items in a directory and its subdirectories.</span></span> <span data-ttu-id="d9877-184">O parâmetro **Depth** determina o número de níveis de subdiretório a serem incluídos na recursão.</span><span class="sxs-lookup"><span data-stu-id="d9877-184">The **Depth** parameter determines the number of subdirectory levels to include in the recursion.</span></span> <span data-ttu-id="d9877-185">Diretórios vazios são excluídos da saída.</span><span class="sxs-lookup"><span data-stu-id="d9877-185">Empty directories are excluded from the output.</span></span>

```powershell
Get-ChildItem -Path C:\Parent -Depth 2
```

```Output
    Directory: C:\Parent

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
d-----        2/14/2019     10:24                SubDir_Level1
-a----        2/13/2019     08:55             26 file.txt

    Directory: C:\Parent\SubDir_Level1

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
d-----        2/14/2019     10:24                SubDir_Level2
-a----        2/13/2019     08:55             26 file.txt

    Directory: C:\Parent\SubDir_Level1\SubDir_Level2

Mode                LastWriteTime         Length Name
----                -------------         ------ ----
d-----        2/14/2019     10:22                SubDir_Level3
-a----        2/13/2019     08:55             26 file.txt
```

<span data-ttu-id="d9877-186">O `Get-ChildItem` cmdlet usa o parâmetro **Path** para especificar **C:\Parent** .</span><span class="sxs-lookup"><span data-stu-id="d9877-186">The `Get-ChildItem` cmdlet uses the **Path** parameter to specify **C:\Parent** .</span></span> <span data-ttu-id="d9877-187">O parâmetro **Depth** especifica dois níveis de recursão.</span><span class="sxs-lookup"><span data-stu-id="d9877-187">The **Depth** parameter specifies two levels of recursion.</span></span> <span data-ttu-id="d9877-188">`Get-ChildItem` exibe o conteúdo do diretório especificado pelo parâmetro **path** e os dois níveis de subdiretórios.</span><span class="sxs-lookup"><span data-stu-id="d9877-188">`Get-ChildItem` displays the contents of the directory specified by the **Path** parameter and the two levels of subdirectories.</span></span>

## <span data-ttu-id="d9877-189">Parâmetros</span><span class="sxs-lookup"><span data-stu-id="d9877-189">Parameters</span></span>

### <span data-ttu-id="d9877-190">-Atributos</span><span class="sxs-lookup"><span data-stu-id="d9877-190">-Attributes</span></span>

<span data-ttu-id="d9877-191">Obtém os arquivos e pastas com os atributos especificados.</span><span class="sxs-lookup"><span data-stu-id="d9877-191">Gets files and folders with the specified attributes.</span></span> <span data-ttu-id="d9877-192">Esse parâmetro dá suporte a todos os atributos e permite que você especifique combinações complexas de atributos.</span><span class="sxs-lookup"><span data-stu-id="d9877-192">This parameter supports all attributes and lets you specify complex combinations of attributes.</span></span>

<span data-ttu-id="d9877-193">Por exemplo, para obter arquivos de fora do sistema (não diretórios) que sejam criptografados ou compactados, digite:</span><span class="sxs-lookup"><span data-stu-id="d9877-193">For example, to get non-system files (not directories) that are encrypted or compressed, type:</span></span>

`Get-ChildItem -Attributes !Directory+!System+Encrypted, !Directory+!System+Compressed`

<span data-ttu-id="d9877-194">Para localizar arquivos e pastas com atributos comumente usados, use o parâmetro **Attributes** .</span><span class="sxs-lookup"><span data-stu-id="d9877-194">To find files and folders with commonly used attributes, use the **Attributes** parameter.</span></span> <span data-ttu-id="d9877-195">Ou, o **diretório** de parâmetros, **arquivo** , **oculto** , **ReadOnly** e **System** .</span><span class="sxs-lookup"><span data-stu-id="d9877-195">Or, the parameters **Directory** , **File** , **Hidden** , **ReadOnly** , and **System** .</span></span>

<span data-ttu-id="d9877-196">O parâmetro **Attributes** dá suporte às seguintes propriedades:</span><span class="sxs-lookup"><span data-stu-id="d9877-196">The **Attributes** parameter supports the following properties:</span></span>

- <span data-ttu-id="d9877-197">**Arquivar**</span><span class="sxs-lookup"><span data-stu-id="d9877-197">**Archive**</span></span>
- <span data-ttu-id="d9877-198">**Compactado**</span><span class="sxs-lookup"><span data-stu-id="d9877-198">**Compressed**</span></span>
- <span data-ttu-id="d9877-199">**Dispositivo**</span><span class="sxs-lookup"><span data-stu-id="d9877-199">**Device**</span></span>
- <span data-ttu-id="d9877-200">**Diretório**</span><span class="sxs-lookup"><span data-stu-id="d9877-200">**Directory**</span></span>
- <span data-ttu-id="d9877-201">**Criptografado**</span><span class="sxs-lookup"><span data-stu-id="d9877-201">**Encrypted**</span></span>
- <span data-ttu-id="d9877-202">**Oculto**</span><span class="sxs-lookup"><span data-stu-id="d9877-202">**Hidden**</span></span>
- <span data-ttu-id="d9877-203">**IntegrityStream**</span><span class="sxs-lookup"><span data-stu-id="d9877-203">**IntegrityStream**</span></span>
- <span data-ttu-id="d9877-204">**Normal**</span><span class="sxs-lookup"><span data-stu-id="d9877-204">**Normal**</span></span>
- <span data-ttu-id="d9877-205">**NoScrubData**</span><span class="sxs-lookup"><span data-stu-id="d9877-205">**NoScrubData**</span></span>
- <span data-ttu-id="d9877-206">**NotContentIndexed**</span><span class="sxs-lookup"><span data-stu-id="d9877-206">**NotContentIndexed**</span></span>
- <span data-ttu-id="d9877-207">**Está**</span><span class="sxs-lookup"><span data-stu-id="d9877-207">**Offline**</span></span>
- <span data-ttu-id="d9877-208">**ReadOnly (somente-leitura)**</span><span class="sxs-lookup"><span data-stu-id="d9877-208">**ReadOnly**</span></span>
- <span data-ttu-id="d9877-209">**ReparsePoint**</span><span class="sxs-lookup"><span data-stu-id="d9877-209">**ReparsePoint**</span></span>
- <span data-ttu-id="d9877-210">**Escassfile**</span><span class="sxs-lookup"><span data-stu-id="d9877-210">**SparseFile**</span></span>
- <span data-ttu-id="d9877-211">**Sistema**</span><span class="sxs-lookup"><span data-stu-id="d9877-211">**System**</span></span>
- <span data-ttu-id="d9877-212">**Temporário**</span><span class="sxs-lookup"><span data-stu-id="d9877-212">**Temporary**</span></span>

<span data-ttu-id="d9877-213">Para obter uma descrição desses atributos, consulte a [enumeração FileAttributes](/dotnet/api/system.io.fileattributes).</span><span class="sxs-lookup"><span data-stu-id="d9877-213">For a description of these attributes, see the [FileAttributes Enumeration](/dotnet/api/system.io.fileattributes).</span></span>

<span data-ttu-id="d9877-214">Para combinar atributos, use os seguintes operadores:</span><span class="sxs-lookup"><span data-stu-id="d9877-214">To combine attributes, use the following operators:</span></span>

- <span data-ttu-id="d9877-215">`!` VÁLIDO</span><span class="sxs-lookup"><span data-stu-id="d9877-215">`!` (NOT)</span></span>
- <span data-ttu-id="d9877-216">`+` E</span><span class="sxs-lookup"><span data-stu-id="d9877-216">`+` (AND)</span></span>
- <span data-ttu-id="d9877-217">`,` OR</span><span class="sxs-lookup"><span data-stu-id="d9877-217">`,` (OR)</span></span>

<span data-ttu-id="d9877-218">Não use espaços entre um operador e seu atributo.</span><span class="sxs-lookup"><span data-stu-id="d9877-218">Don't use spaces between an operator and its attribute.</span></span> <span data-ttu-id="d9877-219">Os espaços são aceitos após vírgulas.</span><span class="sxs-lookup"><span data-stu-id="d9877-219">Spaces are accepted after commas.</span></span>

<span data-ttu-id="d9877-220">Para atributos comuns, use as seguintes abreviações:</span><span class="sxs-lookup"><span data-stu-id="d9877-220">For common attributes, use the following abbreviations:</span></span>

- <span data-ttu-id="d9877-221">`D` Active</span><span class="sxs-lookup"><span data-stu-id="d9877-221">`D` (Directory)</span></span>
- <span data-ttu-id="d9877-222">`H` Oculto</span><span class="sxs-lookup"><span data-stu-id="d9877-222">`H` (Hidden)</span></span>
- <span data-ttu-id="d9877-223">`R` (Somente leitura)</span><span class="sxs-lookup"><span data-stu-id="d9877-223">`R` (Read-only)</span></span>
- <span data-ttu-id="d9877-224">`S` Sistema</span><span class="sxs-lookup"><span data-stu-id="d9877-224">`S` (System)</span></span>

```yaml
Type: System.Management.Automation.FlagsExpression`1[System.IO.FileAttributes]
Parameter Sets: (All)
Aliases:
Accepted values: Archive, Compressed, Device, Directory, Encrypted, Hidden, IntegrityStream, Normal, NoScrubData, NotContentIndexed, Offline, ReadOnly, ReparsePoint, SparseFile, System, Temporary

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-225">-Profundidade</span><span class="sxs-lookup"><span data-stu-id="d9877-225">-Depth</span></span>

<span data-ttu-id="d9877-226">Esse parâmetro foi adicionado no PowerShell 5,0 e permite que você controle a profundidade da recursão.</span><span class="sxs-lookup"><span data-stu-id="d9877-226">This parameter was added in PowerShell 5.0 and enables you to control the depth of recursion.</span></span> <span data-ttu-id="d9877-227">Por padrão, `Get-ChildItem` o exibe o conteúdo do diretório pai.</span><span class="sxs-lookup"><span data-stu-id="d9877-227">By default, `Get-ChildItem` displays the contents of the parent directory.</span></span> <span data-ttu-id="d9877-228">O parâmetro **Depth** determina o número de níveis de subdiretório que são incluídos na recursão e exibe o conteúdo.</span><span class="sxs-lookup"><span data-stu-id="d9877-228">The **Depth** parameter determines the number of subdirectory levels that are included in the recursion and displays the contents.</span></span>

<span data-ttu-id="d9877-229">Por exemplo, `Depth 2` inclui o diretório do parâmetro de **caminho** , o primeiro nível de subdiretórios e o segundo nível de subdiretórios.</span><span class="sxs-lookup"><span data-stu-id="d9877-229">For example, `Depth 2` includes the **Path** parameter's directory, first level of subdirectories, and second level of subdirectories.</span></span> <span data-ttu-id="d9877-230">Por padrão, os nomes do diretório e os nomes de FileName são incluídos na saída.</span><span class="sxs-lookup"><span data-stu-id="d9877-230">By default directory names and filenames are included in the output.</span></span>

> [!NOTE]
> <span data-ttu-id="d9877-231">Em um computador Windows do PowerShell ou **cmd.exe** , você pode exibir uma exibição gráfica de uma estrutura de diretório com o comando **Tree.com** .</span><span class="sxs-lookup"><span data-stu-id="d9877-231">On a Windows computer from PowerShell or **cmd.exe** , you can display a graphical view of a directory structure with the **tree.com** command.</span></span>

```yaml
Type: System.UInt32
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-232">-Directory</span><span class="sxs-lookup"><span data-stu-id="d9877-232">-Directory</span></span>

<span data-ttu-id="d9877-233">Para obter uma lista de diretórios, use o parâmetro **Directory** ou o parâmetro **Attributes** com a propriedade **Directory** .</span><span class="sxs-lookup"><span data-stu-id="d9877-233">To get a list of directories, use the **Directory** parameter or the **Attributes** parameter with the **Directory** property.</span></span> <span data-ttu-id="d9877-234">Você pode usar o parâmetro **recurse** com o **diretório** .</span><span class="sxs-lookup"><span data-stu-id="d9877-234">You can use the **Recurse** parameter with **Directory** .</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: ad, d

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-235">-Excluir</span><span class="sxs-lookup"><span data-stu-id="d9877-235">-Exclude</span></span>

<span data-ttu-id="d9877-236">Especifica, como uma matriz de cadeia de caracteres, uma propriedade ou propriedade que esse cmdlet exclui da operação.</span><span class="sxs-lookup"><span data-stu-id="d9877-236">Specifies, as a string array, a property or property that this cmdlet excludes from the operation.</span></span>
<span data-ttu-id="d9877-237">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="d9877-237">The value of this parameter qualifies the **Path** parameter.</span></span> <span data-ttu-id="d9877-238">Insira um elemento ou padrão de caminho, como `*.txt` ou `A*` .</span><span class="sxs-lookup"><span data-stu-id="d9877-238">Enter a path element or pattern, such as `*.txt` or `A*`.</span></span> <span data-ttu-id="d9877-239">Caracteres curinga são aceitos.</span><span class="sxs-lookup"><span data-stu-id="d9877-239">Wildcard characters are accepted.</span></span>

<span data-ttu-id="d9877-240">Um asterisco à direita ( `*` ) no parâmetro **Path** é opcional.</span><span class="sxs-lookup"><span data-stu-id="d9877-240">A trailing asterisk (`*`) in the **Path** parameter is optional.</span></span> <span data-ttu-id="d9877-241">Por exemplo, `-Path C:\Test\Logs` ou `-Path C:\Test\Logs\*`.</span><span class="sxs-lookup"><span data-stu-id="d9877-241">For example, `-Path C:\Test\Logs` or `-Path C:\Test\Logs\*`.</span></span> <span data-ttu-id="d9877-242">Se um asterisco à direita ( `*` ) for incluído, o comando recursivamente nos subdiretórios do parâmetro de **caminho** .</span><span class="sxs-lookup"><span data-stu-id="d9877-242">If a trailing asterisk (`*`) is included, the command recurses into the **Path** parameter's subdirectories.</span></span> <span data-ttu-id="d9877-243">Sem o asterisco ( `*` ), o conteúdo do parâmetro **Path** é exibido.</span><span class="sxs-lookup"><span data-stu-id="d9877-243">Without the asterisk (`*`), the contents of the **Path** parameter are displayed.</span></span> <span data-ttu-id="d9877-244">Mais detalhes são incluídos no exemplo 5 e na seção observações.</span><span class="sxs-lookup"><span data-stu-id="d9877-244">More details are included in Example 5 and the Notes section.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="d9877-245">-File</span><span class="sxs-lookup"><span data-stu-id="d9877-245">-File</span></span>

<span data-ttu-id="d9877-246">Para obter uma lista de arquivos, use o parâmetro **File** .</span><span class="sxs-lookup"><span data-stu-id="d9877-246">To get a list of files, use the **File** parameter.</span></span> <span data-ttu-id="d9877-247">Você pode usar o parâmetro **recurse** com o **arquivo** .</span><span class="sxs-lookup"><span data-stu-id="d9877-247">You can use the **Recurse** parameter with **File** .</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: af

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-248">-Filter</span><span class="sxs-lookup"><span data-stu-id="d9877-248">-Filter</span></span>

<span data-ttu-id="d9877-249">Especifica um filtro para qualificar o parâmetro **path** .</span><span class="sxs-lookup"><span data-stu-id="d9877-249">Specifies a filter to qualify the **Path** parameter.</span></span> <span data-ttu-id="d9877-250">O provedor [FileSystem](../Microsoft.PowerShell.Core/About/about_FileSystem_Provider.md) é o único provedor do PowerShell instalado que dá suporte a filtros.</span><span class="sxs-lookup"><span data-stu-id="d9877-250">The [FileSystem](../Microsoft.PowerShell.Core/About/about_FileSystem_Provider.md) provider is the only installed PowerShell provider that supports filters.</span></span> <span data-ttu-id="d9877-251">Os filtros são mais eficientes do que outros parâmetros.</span><span class="sxs-lookup"><span data-stu-id="d9877-251">Filters are more efficient than other parameters.</span></span> <span data-ttu-id="d9877-252">O provedor aplica-se ao filtro quando o cmdlet obtém os objetos em vez de fazer com que o PowerShell filtre os objetos depois que eles são recuperados.</span><span class="sxs-lookup"><span data-stu-id="d9877-252">The provider applies filter when the cmdlet gets the objects rather than having PowerShell filter the objects after they're retrieved.</span></span> <span data-ttu-id="d9877-253">A cadeia de caracteres de filtro é passada para a API do .NET para enumerar arquivos.</span><span class="sxs-lookup"><span data-stu-id="d9877-253">The filter string is passed to the .NET API to enumerate files.</span></span> <span data-ttu-id="d9877-254">A API só dá suporte a `*` `?` caracteres curinga e.</span><span class="sxs-lookup"><span data-stu-id="d9877-254">The API only supports `*` and `?` wildcards.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="d9877-255">-Force</span><span class="sxs-lookup"><span data-stu-id="d9877-255">-Force</span></span>

<span data-ttu-id="d9877-256">Permite que o cmdlet obtenha itens que, de outra forma, não podem ser acessados pelo usuário, como arquivos ocultos ou do sistema.</span><span class="sxs-lookup"><span data-stu-id="d9877-256">Allows the cmdlet to get items that otherwise can't be accessed by the user, such as hidden or system files.</span></span> <span data-ttu-id="d9877-257">O parâmetro **Force** não substitui as restrições de segurança.</span><span class="sxs-lookup"><span data-stu-id="d9877-257">The **Force** parameter doesn't override security restrictions.</span></span> <span data-ttu-id="d9877-258">A implementação varia entre os provedores.</span><span class="sxs-lookup"><span data-stu-id="d9877-258">Implementation varies among providers.</span></span> <span data-ttu-id="d9877-259">Para obter mais informações, consulte [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-259">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-260">-Hidden</span><span class="sxs-lookup"><span data-stu-id="d9877-260">-Hidden</span></span>

<span data-ttu-id="d9877-261">Para obter apenas itens ocultos, use o parâmetro **Hidden** ou o parâmetro **Attributes** com a propriedade **Hidden** .</span><span class="sxs-lookup"><span data-stu-id="d9877-261">To get only hidden items, use the **Hidden** parameter or the **Attributes** parameter with the **Hidden** property.</span></span> <span data-ttu-id="d9877-262">Por padrão, o `Get-ChildItem` não exibe itens ocultos.</span><span class="sxs-lookup"><span data-stu-id="d9877-262">By default, `Get-ChildItem` doesn't display hidden items.</span></span> <span data-ttu-id="d9877-263">Use o parâmetro **Force** para obter itens ocultos.</span><span class="sxs-lookup"><span data-stu-id="d9877-263">Use the **Force** parameter to get hidden items.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: ah, h

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-264">-Incluir</span><span class="sxs-lookup"><span data-stu-id="d9877-264">-Include</span></span>

<span data-ttu-id="d9877-265">Especifica, como uma matriz de cadeia de caracteres, um item ou itens que esse cmdlet inclui na operação.</span><span class="sxs-lookup"><span data-stu-id="d9877-265">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span> <span data-ttu-id="d9877-266">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="d9877-266">The value of this parameter qualifies the **Path** parameter.</span></span> <span data-ttu-id="d9877-267">Insira um elemento ou padrão de caminho, como `"*.txt"` .</span><span class="sxs-lookup"><span data-stu-id="d9877-267">Enter a path element or pattern, such as `"*.txt"`.</span></span> <span data-ttu-id="d9877-268">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="d9877-268">Wildcard characters are permitted.</span></span> <span data-ttu-id="d9877-269">O parâmetro **include** é efetivo somente quando o comando inclui o conteúdo de um item, como `C:\Windows\*` , onde o caractere curinga especifica o conteúdo do `C:\Windows` diretório.</span><span class="sxs-lookup"><span data-stu-id="d9877-269">The **Include** parameter is effective only when the command includes the contents of an item, such as `C:\Windows\*`, where the wildcard character specifies the contents of the `C:\Windows` directory.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="d9877-270">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="d9877-270">-LiteralPath</span></span>

<span data-ttu-id="d9877-271">Especifica um caminho para um ou mais locais.</span><span class="sxs-lookup"><span data-stu-id="d9877-271">Specifies a path to one or more locations.</span></span> <span data-ttu-id="d9877-272">O valor de **LiteralPath** é usado exatamente como é digitado.</span><span class="sxs-lookup"><span data-stu-id="d9877-272">The value of **LiteralPath** is used exactly as it's typed.</span></span> <span data-ttu-id="d9877-273">Nenhum caractere é interpretado como caractere curinga.</span><span class="sxs-lookup"><span data-stu-id="d9877-273">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="d9877-274">Se o caminho incluir caracteres de escape, coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="d9877-274">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="d9877-275">Aspas simples instruem o PowerShell a não interpretar nenhum caractere como sequências de escape.</span><span class="sxs-lookup"><span data-stu-id="d9877-275">Single quotation marks tell PowerShell to not interpret any characters as escape sequences.</span></span>

<span data-ttu-id="d9877-276">Para obter mais informações, consulte [about_Quoting_Rules](../Microsoft.Powershell.Core/About/about_Quoting_Rules.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-276">For more information, see [about_Quoting_Rules](../Microsoft.Powershell.Core/About/about_Quoting_Rules.md).</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralItems
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-277">-Name</span><span class="sxs-lookup"><span data-stu-id="d9877-277">-Name</span></span>

<span data-ttu-id="d9877-278">Obtém somente os nomes dos itens no local.</span><span class="sxs-lookup"><span data-stu-id="d9877-278">Gets only the names of the items in the location.</span></span> <span data-ttu-id="d9877-279">A saída é um objeto de cadeia de caracteres que pode ser enviado ao pipeline para outros comandos.</span><span class="sxs-lookup"><span data-stu-id="d9877-279">The output is a string object that can be sent down the pipeline to other commands.</span></span> <span data-ttu-id="d9877-280">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="d9877-280">Wildcards are permitted.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="d9877-281">-Path</span><span class="sxs-lookup"><span data-stu-id="d9877-281">-Path</span></span>

<span data-ttu-id="d9877-282">Especifica um caminho para um ou mais locais.</span><span class="sxs-lookup"><span data-stu-id="d9877-282">Specifies a path to one or more locations.</span></span> <span data-ttu-id="d9877-283">Caracteres curinga são aceitos.</span><span class="sxs-lookup"><span data-stu-id="d9877-283">Wildcards are accepted.</span></span> <span data-ttu-id="d9877-284">O local padrão é o diretório atual ( `.` ).</span><span class="sxs-lookup"><span data-stu-id="d9877-284">The default location is the current directory (`.`).</span></span>

```yaml
Type: System.String[]
Parameter Sets: Items
Aliases:

Required: False
Position: 0
Default value: Current directory
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: True
```

### <span data-ttu-id="d9877-285">-ReadOnly</span><span class="sxs-lookup"><span data-stu-id="d9877-285">-ReadOnly</span></span>

<span data-ttu-id="d9877-286">Para obter somente itens somente leitura, use o parâmetro **ReadOnly** ou a propriedade **ReadOnly** do parâmetro **Attributes** .</span><span class="sxs-lookup"><span data-stu-id="d9877-286">To get only read-only items, use the **ReadOnly** parameter or the **Attributes** parameter **ReadOnly** property.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: ar

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-287">-Recurse</span><span class="sxs-lookup"><span data-stu-id="d9877-287">-Recurse</span></span>

<span data-ttu-id="d9877-288">Obtém os itens nos locais especificados e em todos os itens filhos dos locais.</span><span class="sxs-lookup"><span data-stu-id="d9877-288">Gets the items in the specified locations and in all child items of the locations.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: s

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-289">-System</span><span class="sxs-lookup"><span data-stu-id="d9877-289">-System</span></span>

<span data-ttu-id="d9877-290">Obtém somente os arquivos e diretórios do sistema.</span><span class="sxs-lookup"><span data-stu-id="d9877-290">Gets only system files and directories.</span></span> <span data-ttu-id="d9877-291">Para obter apenas arquivos e pastas do sistema, use o parâmetro do **sistema** ou a propriedade do **sistema** de parâmetros de **atributos** .</span><span class="sxs-lookup"><span data-stu-id="d9877-291">To get only system files and folders, use the **System** parameter or **Attributes** parameter **System** property.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: as

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-292">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="d9877-292">-UseTransaction</span></span>

<span data-ttu-id="d9877-293">Inclui o comando na transação ativa.</span><span class="sxs-lookup"><span data-stu-id="d9877-293">Includes the command in the active transaction.</span></span> <span data-ttu-id="d9877-294">Este parâmetro é válido somente quando uma transação está em andamento.</span><span class="sxs-lookup"><span data-stu-id="d9877-294">This parameter is valid only when a transaction is in progress.</span></span> <span data-ttu-id="d9877-295">Para obter mais informações, consulte [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-295">For more information, see [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="d9877-296">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="d9877-296">CommonParameters</span></span>

<span data-ttu-id="d9877-297">Este cmdlet oferece suporte aos parâmetros comuns: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction e -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="d9877-297">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="d9877-298">Para obter mais informações, confira [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="d9877-298">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="d9877-299">ENTRADAS</span><span class="sxs-lookup"><span data-stu-id="d9877-299">INPUTS</span></span>

### <span data-ttu-id="d9877-300">System.String</span><span class="sxs-lookup"><span data-stu-id="d9877-300">System.String</span></span>

<span data-ttu-id="d9877-301">É possível canalizar uma cadeia de caracteres que contém um caminho para `Get-ChildItem` .</span><span class="sxs-lookup"><span data-stu-id="d9877-301">You can pipe a string that contains a path to `Get-ChildItem`.</span></span>

## <span data-ttu-id="d9877-302">SAÍDAS</span><span class="sxs-lookup"><span data-stu-id="d9877-302">OUTPUTS</span></span>

### <span data-ttu-id="d9877-303">System.Object</span><span class="sxs-lookup"><span data-stu-id="d9877-303">System.Object</span></span>

<span data-ttu-id="d9877-304">O tipo de objeto que `Get-ChildItem` retorna é determinado pelos objetos no caminho da unidade do provedor.</span><span class="sxs-lookup"><span data-stu-id="d9877-304">The type of object that `Get-ChildItem` returns is determined by the objects in the provider drive path.</span></span>

### <span data-ttu-id="d9877-305">System.String</span><span class="sxs-lookup"><span data-stu-id="d9877-305">System.String</span></span>

<span data-ttu-id="d9877-306">Se você usar o parâmetro **Name** , `Get-ChildItem` o retornará os nomes de objeto como cadeias de caracteres.</span><span class="sxs-lookup"><span data-stu-id="d9877-306">If you use the **Name** parameter, `Get-ChildItem` returns the object names as strings.</span></span>

## <span data-ttu-id="d9877-307">OBSERVAÇÕES</span><span class="sxs-lookup"><span data-stu-id="d9877-307">NOTES</span></span>

- <span data-ttu-id="d9877-308">`Get-ChildItem` pode ser executado usando qualquer um dos aliases internos, `ls` , `dir` , e `gci` .</span><span class="sxs-lookup"><span data-stu-id="d9877-308">`Get-ChildItem` can be run using any of the built-in aliases, `ls`, `dir`, and `gci`.</span></span> <span data-ttu-id="d9877-309">Para obter mais informações, consulte [about_Aliases](../Microsoft.PowerShell.Core/About/about_Aliases.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-309">For more information, see [about_Aliases](../Microsoft.PowerShell.Core/About/about_Aliases.md).</span></span>
- <span data-ttu-id="d9877-310">`Get-ChildItem` não obtém itens ocultos por padrão.</span><span class="sxs-lookup"><span data-stu-id="d9877-310">`Get-ChildItem` doesn't get hidden items by default.</span></span> <span data-ttu-id="d9877-311">Para obter itens ocultos, use o parâmetro **Force** .</span><span class="sxs-lookup"><span data-stu-id="d9877-311">To get hidden items, use the **Force** parameter.</span></span>
- <span data-ttu-id="d9877-312">O `Get-ChildItem` cmdlet é projetado para trabalhar com os dados expostos por qualquer provedor.</span><span class="sxs-lookup"><span data-stu-id="d9877-312">The `Get-ChildItem` cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="d9877-313">Para listar os provedores disponíveis em sua sessão, digite `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="d9877-313">To list the providers available in your session, type `Get-PSProvider`.</span></span>
  <span data-ttu-id="d9877-314">Para obter mais informações, consulte [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="d9877-314">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

## <span data-ttu-id="d9877-315">LINKS RELACIONADOS</span><span class="sxs-lookup"><span data-stu-id="d9877-315">RELATED LINKS</span></span>

[<span data-ttu-id="d9877-316">about_Certificate_Provider</span><span class="sxs-lookup"><span data-stu-id="d9877-316">about_Certificate_Provider</span></span>](../Microsoft.PowerShell.Security/About/about_Certificate_Provider.md)

[<span data-ttu-id="d9877-317">about_Providers</span><span class="sxs-lookup"><span data-stu-id="d9877-317">about_Providers</span></span>](../Microsoft.PowerShell.Core/About/about_Providers.md)

[<span data-ttu-id="d9877-318">about_Quoting_Rules</span><span class="sxs-lookup"><span data-stu-id="d9877-318">about_Quoting_Rules</span></span>](../Microsoft.Powershell.Core/About/about_Quoting_Rules.md)

[<span data-ttu-id="d9877-319">about_Registry_Provider</span><span class="sxs-lookup"><span data-stu-id="d9877-319">about_Registry_Provider</span></span>](../Microsoft.PowerShell.Core/About/about_Registry_Provider.md)

[<span data-ttu-id="d9877-320">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="d9877-320">ForEach-Object</span></span>](../Microsoft.PowerShell.Core/ForEach-Object.md)

[<span data-ttu-id="d9877-321">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="d9877-321">Get-Alias</span></span>](../Microsoft.PowerShell.Utility/Get-Alias.md)

[<span data-ttu-id="d9877-322">Get-Item</span><span class="sxs-lookup"><span data-stu-id="d9877-322">Get-Item</span></span>](Get-Item.md)

[<span data-ttu-id="d9877-323">Get-Location</span><span class="sxs-lookup"><span data-stu-id="d9877-323">Get-Location</span></span>](Get-Location.md)

[<span data-ttu-id="d9877-324">Get-Process</span><span class="sxs-lookup"><span data-stu-id="d9877-324">Get-Process</span></span>](Get-Process.md)

[<span data-ttu-id="d9877-325">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="d9877-325">Get-PSProvider</span></span>](Get-PSProvider.md)

[<span data-ttu-id="d9877-326">Split-Path</span><span class="sxs-lookup"><span data-stu-id="d9877-326">Split-Path</span></span>](Split-Path.md)
